@@ -78,9 +78,6 @@ protected:
 	VolumeSliderAction * volumeslider_action;
 #endif
 	TimeLabelAction * time_label_action;
-
-	int floating_control_width; // In percentage
-	bool floating_control_animated;
 };
 
 #endif
